--- a/Name tbd/Assembly-CSharp.csproj
+++ b/Name tbd/Assembly-CSharp.csproj
@@ -70,7 +70,6 @@
      <Compile Include="Assets\Scripts\Items\healthItem.cs" />
      <Compile Include="Assets\Scripts\Items\invincibilityItem.cs" />
      <Compile Include="Assets\Scripts\Loader.cs" />
-     <Compile Include="Assets\Scripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\EnemyAI.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\Gingy.cs" />
@@ -83,7 +82,9 @@
      <Compile Include="Assets\Scripts\PlayerScripts\Player1Controller.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\Player2Controller.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\ShadowGingy.cs" />
-     <Compile Include="Assets\Scripts\PlayerSelector.cs" />
+     <Compile Include="Assets\Scripts\SceneScripts\InputName.cs" />
+     <Compile Include="Assets\Scripts\SceneScripts\MainMenu.cs" />
+     <Compile Include="Assets\Scripts\SceneScripts\PlayerSelector.cs" />
      <Compile Include="Assets\Scripts\SpawnerScripts\AttackItemSpawner.cs" />
      <Compile Include="Assets\Scripts\SpawnerScripts\HealthItemSpawner.cs" />
      <Compile Include="Assets\Scripts\SpawnerScripts\InvincibleItemSpawner.cs" />
