--- a/Name tbd/Assembly-CSharp.csproj
+++ b/Name tbd/Assembly-CSharp.csproj
@@ -54,7 +54,6 @@
      <Compile Include="Assets\Scripts\GameMusic.cs" />
      <Compile Include="Assets\Scripts\GameScripts\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\GameScripts\GameManager.cs" />
-     <Compile Include="Assets\Scripts\GameScripts\GameOver.cs" />
      <Compile Include="Assets\Scripts\GameScripts\LevelGenerator.cs" />
      <Compile Include="Assets\Scripts\GameScripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\GameScripts\Map.cs" />
@@ -82,6 +81,7 @@
      <Compile Include="Assets\Scripts\PlayerScripts\Player1Controller.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\Player2Controller.cs" />
      <Compile Include="Assets\Scripts\PlayerScripts\ShadowGingy.cs" />
+     <Compile Include="Assets\Scripts\SceneScripts\GameOver.cs" />
      <Compile Include="Assets\Scripts\SceneScripts\InputName.cs" />
      <Compile Include="Assets\Scripts\SceneScripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\SceneScripts\PlayerSelector.cs" />
